--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <!-- CHORDS -->
         <li>
-          <a class="item" href="chords-book-v2.html">
+          <a class="item" href="the-chords-book.html">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
               <circle cx="6" cy="17" r="2.4"></circle>
               <circle cx="18" cy="17" r="2.4"></circle>
