--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -54,7 +54,7 @@
         <a href="index.html" data-i18n="scales_back">← Back to index</a>
       </nav>
       <div class="row" style="gap:6px; position:relative;">
-        <label class="visually-hidden" for="langSelect" data-i18n="lang_label" style="position:absolute;left:-9999px;">Language</label>
+        <label class="visually-hidden" for="langSelect" data-i18n="lang_label">Language</label>
         <select id="langSelect" class="lang-select" aria-label="Language" title="Language">
           <option value="en">EN</option>
           <option value="es">ES</option>
