--- a/modal-architect.html
+++ b/modal-architect.html
@@ -6,54 +6,9 @@
   <title>The Modal Architect — Contumance</title>
   <meta name="description" content="Design harmonic structures from scale geometry. Choose a mode, a root, write degrees, and craft playable guitar inversions." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>">
+  <link rel="stylesheet" href="assets/kindle.css">
 
   <style>
-    /* ---- Shared palette & rhythm (unified with Scales/Chords) ---- */
-    :root{
-      --paper:#f5f1e8; --ink:#2f2a1e; --muted:#6b6253;
-      --link:#2d5842; --link-visited:#514f7a;
-      --accent:#a08a63; --rule:#d8d2c2; --accent-soft:#999;
-      --maxw:42rem; --radius:14px; --lh:1.6; --fs-base:18px;
-    }
-    html.theme-dark{
-      --paper:#10110f; --ink:#dbd6c9; --muted:#a39c8c;
-      --link:#a9d0b8; --link-visited:#c0b8e0;
-      --accent:#2a2b27; --rule:#2a2b27; --accent-soft:#7f7a6b;
-    }
-    html{ font-size:var(--fs-base); }
-    body{
-      margin:0; padding:0; color:var(--ink); background:var(--paper); line-height:var(--lh);
-      font-family: ui-serif, Georgia, "Iowan Old Style", "Palatino Linotype", Palatino, serif;
-      text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased;
-    }
-    body::before{
-      content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
-      background-image:
-        radial-gradient(circle at 25% 15%, #000 0.5px, transparent 0.5px),
-        radial-gradient(circle at 75% 85%, #000 0.5px, transparent 0.5px);
-      background-size:3px 3px, 3px 3px; mix-blend-mode:multiply;
-    }
-    main{ max-width:var(--maxw); margin:0 auto; padding:7vh 1.25rem 4rem; }
-
-    .topbar{ display:flex; align-items:center; justify-content:space-between; gap:1rem; margin-bottom:1rem; }
-    nav.breadcrumb{ font-size:.95rem; }
-    nav.breadcrumb a{ color:var(--link); text-decoration:none; text-underline-offset:2px; }
-    h1{ margin:.2rem 0 .3rem 0; font-weight:600; font-size:clamp(1.6rem,4vw,2.2rem); }
-    .subtitle{ color:var(--muted); font-size:.95rem; margin-bottom:.8rem; }
-    .theme-toggle{
-      border:1px solid var(--accent); background:transparent; color:var(--ink);
-      border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.15rem; line-height:1;
-    }
-    .theme-toggle:focus-visible{ outline:2px dashed var(--accent); outline-offset:2px; }
-
-    details.panel{ border:1px solid var(--accent); border-radius:.6rem; background: rgba(255,255,255,0.6); }
-    html.theme-dark details.panel{ background: rgba(0,0,0,0.1); }
-    details.panel>summary{ cursor:pointer; list-style:none; padding:.6rem .8rem; font-size:.95rem; font-weight:600; color:var(--ink); }
-    details.panel>summary::-webkit-details-marker{ display:none; }
-    details.panel .panel-body{ padding:.6rem .8rem .9rem; }
-    details.panel>summary::after{ content:"▾"; float:right; transition:transform .2s ease; }
-    details.panel[open]>summary::after{ transform:rotate(180deg); }
-
     .controls{ display:grid; gap:8px; align-items:center; grid-template-columns: repeat(auto-fit, minmax(180px,1fr)); margin-bottom:8px; }
     .row{ display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
     label{ font-size:12px; opacity:.9; display:block; }
@@ -69,13 +24,12 @@
     .titleline{ display:flex; align-items:baseline; justify-content:space-between; gap:.5rem; }
     .deg{ font-weight:700; letter-spacing:.03em; }
     .name{ font-variant:small-caps; font-weight:600; }
-    .meta{ color:var(--muted); font-size:.85rem; display:flex; gap:.6rem; flex-wrap:wrap; margin:.35rem 0 .55rem; }
+    .card .meta{ color:var(--muted); font-size:.85rem; display:flex; gap:.6rem; flex-wrap:wrap; margin:.35rem 0 .55rem; }
 
     .controls-row{ display:flex; gap:.4rem; flex-wrap:wrap; align-items:center; margin:.25rem 0 .55rem; }
     .chip{ border:1px solid var(--accent); border-radius:999px; padding:.2rem .6rem; font-size:.8rem; color:var(--muted); }
     .iconbtn{ border:1px solid var(--accent); background:transparent; color:inherit; width:2.1rem; height:2.1rem; border-radius:.5rem; cursor:pointer; }
 
-    /* Hint/comment style */
     .hint{
       font-size: .8rem;
       color: var(--muted);
@@ -87,7 +41,6 @@
       line-height: 1.4;
     }
 
-    /* --- Mini fretboard SVG (same system as The Chords Book) --- */
     .fb svg{ max-width:100%; height:auto; display:block; }
     .fb-grid line{ stroke:var(--rule); stroke-width:1; }
     .fb-grid .nut{ stroke:var(--ink); stroke-width:3; }
@@ -97,22 +50,6 @@
     html.theme-dark .fb-grid text{ fill:var(--ink); opacity:.85; }
     html.theme-dark .fb-grid line{ stroke:#3b3a34; }
     html.theme-dark .fb-note text{ fill:var(--paper); font-weight:800; }
-
-    footer{ display:flex; flex-direction:column; align-items:center; gap:.25rem; font-size:.9rem; opacity:.9; padding:1.5rem 0; }
-    footer .btn{ display:inline-flex; align-items:center; gap:.5rem; text-decoration:none; border:1px solid var(--accent); border-radius:999px; padding:.45rem .95rem; font-size:.9rem; font-weight:500; transition:background-color .25s ease, color .25s ease, transform .1s ease, filter .2s ease; }
-    html:not(.theme-dark) footer .btn{ background:color-mix(in oklab, var(--accent) 10%, var(--paper) 90%); color:var(--ink); }
-    html:not(.theme-dark) footer .btn:hover{ background:color-mix(in oklab, var(--accent) 20%, var(--paper) 80%); }
-    html.theme-dark footer .btn{ background:color-mix(in oklab, var(--accent) 40%, var(--ink) 60%); color:var(--paper); }
-    html.theme-dark footer .btn:hover{ background:color-mix(in oklab, var(--accent) 55%, var(--ink) 45%); }
-    footer .btn .btn-icon{ width:1.2rem; height:1.2rem; stroke:currentColor; }
-    footer .note{font-size:.85rem;color:var(--muted)}
-    footer .byline{font-size:.75rem;opacity:.7}
-    footer .byline em{font-style:italic;letter-spacing:.02em}
-
-    @media (prefers-reduced-motion:no-preference){
-      a{ position:relative; background-image:linear-gradient(currentColor,currentColor); background-position:0 100%; background-repeat:no-repeat; background-size:0% 1px; transition:background-size .25s ease, color .2s ease; }
-      a:hover, a:focus-visible{ background-size:100% 1px; outline:none; }
-    }
   </style>
 </head>
 <body>
