--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -9,170 +9,8 @@
     content="All playable chord shapes within frets 0–12, including open strings. Supports 4–8 strings." />
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>">
+  <link rel="stylesheet" href="assets/kindle.css">
   <style>
-    /* Base palette (light mode) aligned with Scales */
-    :root {
-      --paper: #f5f1e8;
-      /* paper bg */
-      --ink: #2f2a1e;
-      /* main text */
-      --muted: #6b6253;
-      /* secondary text */
-      --link: #2d5842;
-      /* links */
-      --link-visited: #514f7a;
-      --accent: #a08a63;
-      /* borders */
-      --rule: #d8d2c2;
-      /* inner lines */
-      --accent-soft: #999;
-      /* soft markers */
-      --maxw: 42rem;
-      /* reading width */
-      --radius: 14px;
-      --lh: 1.6;
-      --fs-base: 18px;
-    }
-
-    html.theme-dark {
-      --paper: #10110f;
-      --ink: #dbd6c9;
-      --muted: #a39c8c;
-      --link: #a9d0b8;
-      --link-visited: #c0b8e0;
-      --accent: #2a2b27;
-      --rule: #2a2b27;
-      --accent-soft: #7f7a6b;
-    }
-
-    html {
-      font-size: var(--fs-base);
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      color: var(--ink);
-      background: var(--paper);
-      line-height: var(--lh);
-      font-family: ui-serif, Georgia, "Iowan Old Style", "Palatino Linotype", Palatino, serif;
-      text-rendering: optimizeLegibility;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    /* subtle paper texture */
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      opacity: .06;
-      background-image:
-        radial-gradient(circle at 25% 15%, #000 0.5px, transparent 0.5px),
-        radial-gradient(circle at 75% 85%, #000 0.5px, transparent 0.5px);
-      background-size: 3px 3px, 3px 3px;
-      mix-blend-mode: multiply;
-    }
-
-    main {
-      max-width: var(--maxw);
-      margin: 0 auto;
-      padding: 7vh 1.25rem 4rem;
-    }
-
-    /* topbar + breadcrumb matches Scales */
-    .topbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    nav.breadcrumb {
-      font-size: .95rem;
-    }
-
-    nav.breadcrumb a {
-      color: var(--link);
-      text-decoration: none;
-      text-underline-offset: 2px;
-    }
-
-    h1 {
-      margin: .2rem 0 .3rem 0;
-      font-weight: 600;
-      font-size: clamp(1.6rem, 4vw, 2.2rem);
-    }
-
-    .subtitle {
-      color: var(--muted);
-      font-size: .95rem;
-      margin-bottom: .8rem;
-    }
-
-    .theme-toggle {
-      border: 1px solid var(--accent);
-      background: transparent;
-      color: var(--ink);
-      border-radius: .45rem;
-      padding: .35rem .55rem;
-      cursor: pointer;
-      font-size: 1.15rem;
-      line-height: 1;
-    }
-
-    .theme-toggle:focus-visible {
-      outline: 2px dashed var(--accent);
-      outline-offset: 2px;
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid var(--accent);
-      margin: 1.25rem 0;
-      opacity: .5;
-    }
-
-    /* panel styling */
-    details.panel {
-      border: 1px solid var(--accent);
-      border-radius: .6rem;
-      background: rgba(255, 255, 255, 0.6);
-    }
-
-    html.theme-dark details.panel {
-      background: rgba(0, 0, 0, 0.1);
-    }
-
-    details.panel>summary {
-      cursor: pointer;
-      list-style: none;
-      padding: .6rem .8rem;
-      font-size: .95rem;
-      font-weight: 600;
-      color: var(--ink);
-    }
-
-    details.panel>summary::-webkit-details-marker {
-      display: none;
-    }
-
-    details.panel .panel-body {
-      padding: .6rem .8rem .9rem;
-    }
-
-    /* show a chevron */
-    details.panel>summary::after {
-      content: "▾";
-      float: right;
-      transition: transform .2s ease;
-    }
-
-    details.panel[open]>summary::after {
-      transform: rotate(180deg);
-    }
-
     /* compact controls (same rhythm as Scales) */
     .controls {
       display: grid;
@@ -257,13 +95,13 @@
       background: transparent;
     }
 
-    .title {
+    .card .title {
       font-weight: 700;
       letter-spacing: .01em;
       margin-bottom: .25rem;
     }
 
-    .meta {
+    .card .meta {
       color: var(--muted);
       font-size: .85rem;
       display: flex;
@@ -320,80 +158,6 @@
       fill: var(--paper);
       font-weight: 800;
     }
-
-    /* Hover underline animation (like index/Scales) */
-    @media (prefers-reduced-motion:no-preference) {
-      a {
-        position: relative;
-        background-image: linear-gradient(currentColor, currentColor);
-        background-position: 0 100%;
-        background-repeat: no-repeat;
-        background-size: 0% 1px;
-        transition: background-size .25s ease, color .2s ease;
-      }
-
-      a:hover,
-      a:focus-visible {
-        background-size: 100% 1px;
-        outline: none;
-      }
-    }
-
-  /* Footer base */
-footer{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:.25rem;
-  font-size:.9rem;
-  opacity:.9;
-  padding:1.5rem 0;
-}
-
-/* Botón Buy Me a Coffee adaptado al tema */
-footer .btn{
-  display:inline-flex;
-  align-items:center;
-  gap:.5rem;
-  text-decoration:none;
-  border:1px solid var(--accent);
-  border-radius:999px;
-  padding:.45rem .95rem;
-  font-size:.9rem;
-  font-weight:500;
-  transition:background-color .25s ease, color .25s ease, transform .1s ease, filter .2s ease;
-}
-
-/* Modo claro */
-html:not(.theme-dark) footer .btn{
-  background:color-mix(in oklab, var(--accent) 10%, var(--paper) 90%);
-  color:var(--ink);
-}
-html:not(.theme-dark) footer .btn:hover{
-  background:color-mix(in oklab, var(--accent) 20%, var(--paper) 80%);
-}
-
-/* Modo oscuro */
-html.theme-dark footer .btn{
-  background:color-mix(in oklab, var(--accent) 40%, var(--ink) 60%);
-  color:var(--paper);
-}
-html.theme-dark footer .btn:hover{
-  background:color-mix(in oklab, var(--accent) 55%, var(--ink) 45%);
-}
-
-/* Ícono coherente con el color del texto */
-footer .btn .btn-icon{
-  width:1.2rem;
-  height:1.2rem;
-  stroke:currentColor;
-}
-
-/* Texto complementario */
-footer .note{font-size:.85rem;color:var(--muted)}
-footer .byline{font-size:.75rem;opacity:.7}
-footer .byline em{font-style:italic;letter-spacing:.02em}
-
   </style>
 </head>
 
