--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
           </a>
         </li>
 
+        <!-- DJENT RIFF FORGE -->
+        <li>
+          <a class="item" href="djent-riff-forge.html">
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M5 4.5 C4 8.5 4 13.5 5 17.5 C5.6 19.9 8.1 21 10.4 20 L17 17.3 C19.1 16.4 20.5 14.3 20.5 12 C20.5 9.7 19.1 7.6 17 6.7 L10.4 4 C8.1 3 5.6 4.1 5 6.5 Z" />
+              <line x1="9.5" y1="7.5" x2="14.5" y2="16.5" />
+              <line x1="7.8" y1="9.2" x2="12.8" y2="18.2" />
+              <line x1="11.2" y1="6.2" x2="16.2" y2="15.2" />
+            </svg>
+            <span class="title" data-i18n="app_riff_title">The Djent Riff Forge</span>
+            <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, Meshuggah-leaning grids, syncopation & instant MIDI.</span>
+          </a>
+        </li>
+
       </ul>
     </nav>
 
@@ -164,6 +178,8 @@
         app_modal_meta: "Design harmonic structures from scale geometry.",
         app_poly_title: "The Polyrhythm Forge",
         app_poly_meta: "Concentric rings for polyrhythms & polymeters — Mesh-ish grooves, Euclidean accents, swing & pan.",
+        app_riff_title: "The Djent Riff Forge",
+        app_riff_meta: "Heavy riff generator — tunings, Meshuggah-leaning grids, syncopation & instant MIDI.",
         buyme: "Buy me a coffee",
         buyme_aria: "Support this library on Buy Me a Coffee",
         footer_note: "Fuel the craft. Inspire the next page.",
@@ -189,6 +205,8 @@
         app_modal_meta: "Diseña estructuras armónicas desde la geometría de las escalas.",
         app_poly_title: "The Polyrhythm Forge",
         app_poly_meta: "Anillos concéntricos para polirritmos y polímetros — grooves, acentos euclídeos, swing y paneo.",
+        app_riff_title: "The Djent Riff Forge",
+        app_riff_meta: "Generador de riffs pesados — afinaciones, grids al estilo Meshuggah, sincopas y MIDI al instante.",
         buyme: "Invítame un café",
         buyme_aria: "Apoya esta biblioteca en Buy Me a Coffee",
         footer_note: "Alimenta la creación. Inspira la próxima página.",
@@ -214,6 +232,8 @@
         app_modal_meta: "Desenhe estruturas harmônicas a partir da geometria das escalas.",
         app_poly_title: "The Polyrhythm Forge",
         app_poly_meta: "Anéis concêntricos para polirritmos e polímetros — grooves tipo Mesh, acentos euclidianos, swing e pan.",
+        app_riff_title: "The Djent Riff Forge",
+        app_riff_meta: "Gerador de riffs pesados — afinações, grids Meshuggah-like, síncopes e MIDI imediato.",
         buyme: "Pague-me um café",
         buyme_aria: "Apoie esta biblioteca no Buy Me a Coffee",
         footer_note: "Alimente o ofício. Inspire a próxima página.",
