--- a/djent-riff-forge.html
+++ b/djent-riff-forge.html
@@ -171,6 +171,7 @@
 
   <script>
     const $ = sel => document.querySelector(sel);
+    const $$ = sel => Array.from(document.querySelectorAll(sel));
     const NOTE_PC = {"C":0,"C#":1,"Db":1,"D":2,"D#":3,"Eb":3,"E":4,"F":5,"F#":6,"Gb":6,"G":7,"G#":8,"Ab":8,"A":9,"A#":10,"Bb":10,"B":11};
     const NOTE_NAMES = ["C","C#","D","D#","E","F","F#","G","G#","A","A#","B"];
     function clamp(v,min,max){ return Math.min(max, Math.max(min, v)); }
