--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </a>
         </li>
 
-        <!-- DJENT RIFF FORGE -->
+        <!-- RIFF FORGE -->
         <li>
           <a class="item" href="djent-riff-forge.html">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
@@ -132,8 +132,8 @@
               <line x1="7.8" y1="9.2" x2="12.8" y2="18.2" />
               <line x1="11.2" y1="6.2" x2="16.2" y2="15.2" />
             </svg>
-            <span class="title" data-i18n="app_riff_title">The Djent Riff Forge</span>
-            <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, Meshuggah-leaning grids, syncopation & instant MIDI.</span>
+            <span class="title" data-i18n="app_riff_title">The Riff Forge</span>
+            <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, djent leaning grids, syncopation & instant MIDI.</span>
           </a>
         </li>
 
