--- a/djent-riff-forge.html
+++ b/djent-riff-forge.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Djent Riff Forge — Re:sonance</title>
+  <title>The Riff Forge — Re:sonance</title>
   <meta name="description" content="Generate djent-inspired guitar riffs. Choose tunings, scales, BPM, meters, accents, and download the MIDI." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.8em' font-size='84'>⚙</text></svg>">
   <link rel="stylesheet" href="assets/kindle.css">
@@ -63,8 +63,8 @@
     </div>
 
     <header>
-      <h1>The Djent Riff Forge</h1>
-      <p class="tagline">Meshuggah-flavored riffs. Dial tunings, scales, meter, and velocity accents—then forge MIDI-ready chugs.</p>
+      <h1>The Riff Forge</h1>
+      <p class="tagline">Djent-flavored riffs. Dial tunings, scales, meter, and velocity accents—then forge MIDI-ready chugs.</p>
     </header>
 
     <section class="controls" role="group" aria-label="Riff generation controls">
