--- a/djent-riff-forge.html
+++ b/djent-riff-forge.html
@@ -197,7 +197,9 @@
       { id:'dropB', name:'Drop B — B F# B E G# C#', strings:['B1','F#2','B2','E3','G#3','C#4'] },
       { id:'dropA', name:'Drop A — A E A D F# B', strings:['A1','E2','A2','D3','F#3','B3'] },
       { id:'sevenB', name:'7-string Standard — B E A D G B E', strings:['B1','E2','A2','D3','G3','B3','E4'] },
-      { id:'eightF', name:'8-string Low F# — F#1 B1 E2 A2 D3 G3 B3 E4', strings:['F#1','B1','E2','A2','D3','G3','B3','E4'] }
+      { id:'eightF', name:'8-string Low F# — F#1 B1 E2 A2 D3 G3 B3 E4', strings:['F#1','B1','E2','A2','D3','G3','B3','E4'] },
+      { id:'eightDropE', name:'8-string Low E — E1 B1 E2 A2 D3 G3 B3 E4', strings:['E1','B1','E2','A2','D3','G3','B3','E4'] }
+    ];
     ];
 
     const SCALES = [
