--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
         app_modal_meta: "Design harmonic structures from scale geometry.",
         app_poly_title: "The Polyrhythm Forge",
         app_poly_meta: "Concentric rings for polyrhythms & polymeters — Mesh-ish grooves, Euclidean accents, swing & pan.",
-        app_riff_title: "The Djent Riff Forge",
-        app_riff_meta: "Heavy riff generator — tunings, Meshuggah-leaning grids, syncopation & instant MIDI.",
+        app_riff_title: "The Riff Forge",
+        app_riff_meta: "Heavy riff generator — tunings, Djent-leaning grids, syncopation & instant MIDI.",
         buyme: "Buy me a coffee",
         buyme_aria: "Support this library on Buy Me a Coffee",
         footer_note: "Fuel the craft. Inspire the next page.",
@@ -205,8 +205,8 @@
         app_modal_meta: "Diseña estructuras armónicas desde la geometría de las escalas.",
         app_poly_title: "The Polyrhythm Forge",
         app_poly_meta: "Anillos concéntricos para polirritmos y polímetros — grooves, acentos euclídeos, swing y paneo.",
-        app_riff_title: "The Djent Riff Forge",
-        app_riff_meta: "Generador de riffs pesados — afinaciones, grids al estilo Meshuggah, sincopas y MIDI al instante.",
+        app_riff_title: "The Riff Forge",
+        app_riff_meta: "Generador de riffs pesados — afinaciones, grids al estilo Djent, sincopas y MIDI al instante.",
         buyme: "Invítame un café",
         buyme_aria: "Apoya esta biblioteca en Buy Me a Coffee",
         footer_note: "Alimenta la creación. Inspira la próxima página.",
@@ -232,8 +232,8 @@
         app_modal_meta: "Desenhe estruturas harmônicas a partir da geometria das escalas.",
         app_poly_title: "The Polyrhythm Forge",
         app_poly_meta: "Anéis concêntricos para polirritmos e polímetros — grooves tipo Mesh, acentos euclidianos, swing e pan.",
-        app_riff_title: "The Djent Riff Forge",
-        app_riff_meta: "Gerador de riffs pesados — afinações, grids Meshuggah-like, síncopes e MIDI imediato.",
+        app_riff_title: "The Riff Forge",
+        app_riff_meta: "Gerador de riffs pesados — afinações, grids Djent-like, síncopes e MIDI imediato.",
         buyme: "Pague-me um café",
         buyme_aria: "Apoie esta biblioteca no Buy Me a Coffee",
         footer_note: "Alimente o ofício. Inspire a próxima página.",
