--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <!-- RIFF FORGE -->
         <li>
-          <a class="item" href="djent-riff-forge.html">
+          <a class="item" href="riff-forge.html">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
               <path d="M5 4.5 C4 8.5 4 13.5 5 17.5 C5.6 19.9 8.1 21 10.4 20 L17 17.3 C19.1 16.4 20.5 14.3 20.5 12 C20.5 9.7 19.1 7.6 17 6.7 L10.4 4 C8.1 3 5.6 4.1 5 6.5 Z" />
               <line x1="9.5" y1="7.5" x2="14.5" y2="16.5" />
